// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute deployment to Azure. Final step after preparation and validation. Runs azd up, azd deploy, or infrastructure provisioning commands. Applies to projects whose infrastructure as code are either in Bicep or Terraform. WHEN: run azd up, run azd deploy, execute deployment, provision infrastructure, push to production, push to cloud, go live, ship it, deploy web app, deploy container app, deploy static site, deploy Azure Functions, deploy function app, deploy serverless function, deploy Azure Functions to cloud, bicep deploy, terraform apply.",
  "extractedKeywords": [
    "after",
    "applies",
    "apply",
    "azure",
    "bicep",
    "cli",
    "cloud",
    "code",
    "commands",
    "container",
    "deploy",
    "deployment",
    "either",
    "execute",
    "final",
    "function",
    "functions",
    "identity",
    "infrastructure",
    "live",
    "mcp",
    "preparation",
    "production",
    "projects",
    "provision",
    "provisioning",
    "push",
    "runs",
    "serverless",
    "ship",
    "site",
    "static",
    "step",
    "terraform",
    "validation",
    "when",
    "whose",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "after",
  "applies",
  "apply",
  "azure",
  "bicep",
  "cli",
  "cloud",
  "code",
  "commands",
  "container",
  "deploy",
  "deployment",
  "either",
  "execute",
  "final",
  "function",
  "functions",
  "identity",
  "infrastructure",
  "live",
  "mcp",
  "preparation",
  "production",
  "projects",
  "provision",
  "provisioning",
  "push",
  "runs",
  "serverless",
  "ship",
  "site",
  "static",
  "step",
  "terraform",
  "validation",
  "when",
  "whose",
]
`;
